Update index.scss to prevent outer scrollbar by adding overflow hidden; commented out height property for potential future use.

--- a/src/index.scss
+++ b/src/index.scss
@@ -57,7 +57,8 @@ div.xblock-highlight {
 html,
 body {
   background-color: $light-200;
- 
+  overflow: hidden !important; /* Prevent outer scrollbar */
+  // height: 100%;
 
   .editor-page {
     background-color: $light-100;
